--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
-    compile 'com.github.ericwlange:AndroidJSCore:3.0.1'
+    compile 'com.squareup.duktape:duktape-android:1.1.0'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:design:25.0.0'
     compile 'com.aurelhubert:ahbottomnavigation:2.0.2'
