Oops, removing stuff on manifest, actual dependency added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.aurelhubert:ahbottomnavigation:2.0.2'
     compile 'com.android.support:support-core-ui:25.0.1'
     compile 'commons-lang:commons-lang:2.6'
+    compile 'com.github.scribejava:scribejava-apis:4.0.0'
 }
