--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:support-core-ui:25.0.1'
     compile 'commons-lang:commons-lang:2.6'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    compile 'com.commonsware.cwac:cam2:0.7.4'
 }
