$util.datepicker fix to support both date and time

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.commonsware.cwac:cam2:0.7.4'
     compile 'com.github.adrielcafe:AndroidAudioRecorder:0.2.0'
     compile 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
+    compile 'com.github.florent37:singledateandtimepicker:1.0.8'
 }
