--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -43,9 +43,9 @@
             android:theme="@style/CameraTheme"/>
 
         <!-- Uncomment below line and add your Google Maps API key -->
-
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBQVtV9PM1djj7ZotagSlxeN2vL6b459lg"/>
-
+        <!--
+               <meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR GOOGLE MAPS API KEY HERE"/>
+       -->
     </application>
 
 </manifest>
