--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jasonette.seed">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <!-- Uncomment below line to enable $util.addressbook -->
+    <!--         <uses-permission android:name="android.permission.READ_CONTACTS"/> -->
+
+
+    <!-- Uncomment below lines to enable $geo.get -->
+    <!--
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    -->
+
+
+    <!-- Uncomment below lines to enable $audio.record -->
+    <!--
+        <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+        <uses-permission android:name="android.permission.WAKE_LOCK" />
+    -->
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".Launcher.Launcher"
         android:allowBackup="true"
@@ -9,9 +32,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Core.JasonViewActivity" android:windowSoftInputMode="adjustResize" >
+        <activity
+            android:name=".Core.JasonViewActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
@@ -24,6 +50,7 @@
                 <data android:scheme="jason" />
             </intent-filter>
             -->
+
 
             <!-- Uncomment below intent-filter to support url opening -->
             <!--
@@ -38,34 +65,20 @@
         <activity
             android:name="com.commonsware.cwac.cam2.CameraActivity"
             android:process=":cwac_cam2"
-            android:theme="@style/CameraTheme"/>
+            android:theme="@style/CameraTheme" />
+
+        <service android:name=".Service.push.JasonPushRegisterService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
         <!-- Uncomment below line and add your Google Maps API key -->
-        <!--
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR GOOGLE MAPS API KEY HERE"/>
-        -->
+        <!--         <meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR GOOGLE MAPS API KEY HERE"/> -->
+        <service
+            android:name=".Service.push.JasonPushMessageService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- Uncomment below line to enable $util.addressbook -->
-    <!--
-        <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    -->
-
-    <!-- Uncomment below lines to enable $geo.get -->
-    <!--
-        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    -->
-
-    <!-- Uncomment below lines to enable $audio.record -->
-    <!--
-        <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-        <uses-permission android:name="android.permission.WAKE_LOCK" />
-    -->
-
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
