--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -42,6 +42,23 @@
             android:process=":cwac_cam2"
             android:theme="@style/CameraTheme"/>
 
+        <!-- Uncomment below to support push notification -->
+        <!--
+        <service
+            android:name=".Service.push.JasonPushRegisterService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name=".Service.push.JasonPushMessageService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        -->
+
+
         <!-- Uncomment below line and add your Google Maps API key -->
         <!--
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR GOOGLE MAPS API KEY HERE"/>
