--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.github.maks:AndroidAudioRecorder:0.3.0-jasonette'
     compile 'com.github.florent37:singledateandtimepicker:1.0.8'
     compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'com.google.android.gms:play-services:+'
 }
