Added password protection for $keys

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.scottyab:secure-preferences-lib:0.1.4'
+    compile 'com.github.gliechtenstein:PasscodeView:master'
 }
