--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:name="com.commonsware.cwac.cam2.CameraActivity"
             android:process=":cwac_cam2"
             android:theme="@style/CameraTheme"/>
+        <activity android:name=".Lib.PasscodeActivity"/>
 
         <!-- Uncomment below line and add your Google Maps API key -->
         <!--
