--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
-        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
