--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     implementation 'com.google.android.gms:play-services-vision:18.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    implementation 'org.hjson:hjson:3.0.0'
 }
